# flame-on-rpi

./: .gitmodules  LICENSE  Makefile  README.md  presentation.md  setup-os.sh
joystick_plugin/: README.md  pubspec.yaml
joystick_plugin/example/: README.md  pubspec.yaml
joystick_plugin/example/lib/: main.dart
joystick_plugin/example/linux/: CMakeLists.txt  main.cc  my_application.cc
joystick_plugin/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
joystick_plugin/example/test/: widget_test.dart
joystick_plugin/lib/: joystick_plugin.dart
joystick_plugin/linux/: CMakeCache.txt  CMakeLists.txt  joystick_plugin.cc
joystick_plugin/linux/include/joystick_plugin/: joystick_plugin.h
joystick_plugin/test/: joystick_plugin_test.dart
linux-joypad-demo/: .gitignore  CMakeLists.txt  Makefile  main.c  main.dart  pubspec.yaml
